// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show correct message when multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    <b>
      3
    </b>
     expense
    s
     totalling 
    <b>
      $25,500.00
    </b>
  </h1>
</div>
`;

exports[`Should show correct message when only one expense 1`] = `
<div>
  <h1>
    Viewing 
    <b>
      1
    </b>
     expense
     totalling 
    <b>
      $150.00
    </b>
  </h1>
</div>
`;
